corrections html, css, contrastes

--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
 a,
 button {
     transition: all .3s ease-in-out;
-    outline: none!important;
+    outline: unset;
 }
 
 a:hover {
@@ -89,18 +89,18 @@ a:hover {
     left: 0;
     right: 0;
 }
-
+/*
 .texture-paper::before {
     background: url("img/texture-paper.png");
     background-size: 280px 280px;
 }
-
+*/
 .b-parallax {
     background-attachment: fixed;
 }
 
 .d-bloc {
-    color: rgba(255, 255, 255, .7);
+    color: white;
 }
 
 .d-bloc button:hover {
@@ -133,7 +133,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: white;
+    color: #364577;
 }
 
 .d-bloc .a-btn:hover,
@@ -286,6 +286,7 @@ a:hover {
 
 #bloc-1-hero h1 {
     font-size: 36px;
+    color:#FFCA9F;
 }
 
 .navbar {
@@ -439,6 +440,7 @@ nav .caret {
 .mg-md {
     margin: 10px 5px 20px 5px;
     line-height: 1.5em;
+    color:#FFCA9F
 }
 
 .mg-lg {
@@ -477,7 +479,7 @@ button {
 }
 
 .icon-md {
-    font-size: 40px!important;
+    font-size: 30px!important;
 }
 
 .icon-lg {
@@ -631,15 +633,16 @@ a[data-lightbox]:hover img {
 }
 
 .snapshot-lb .modal-body {
-    padding-bottom: 45px;
+    padding-bottom: 65px;
 }
 
 .snapshot-lb .lightbox-caption {
     padding: 0;
     color: rgba(0, 0, 0, .5);
     background: none;
+    text-align: center;
 }
-
+/*
 h1,
 h2,
 h3,
@@ -652,15 +655,16 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: #575757;
 }
-
+*/
 .container {
     max-width: 1000px;
 }
 
 .hero-bloc-text {
     font-size: 38px;
+    color: #364577;
 }
 
 .hero-bloc-text-sub {
@@ -680,11 +684,14 @@ a {
 p {
     font-size: 15px;
     line-height: 1.5em;
+    color: black;
 }
 
 .tight-width-whitespace {
     width: 80%;
     margin: auto auto auto auto;
+    color: #364577;
+    font-size: 20px;
 }
 
 .h1 {
@@ -723,6 +730,7 @@ h3 {
 h2.text-center.white {
     line-height: 1.5em;
     margin: 10px 5px 30px 5px;
+    color: #364577!important;
 }
 .med-width-whitespace {
     width: 100%;
@@ -730,10 +738,10 @@ h2.text-center.white {
     box-shadow: 0px 0px 0px #000000;
 }
 
-h1 {
-    color: #333333!important;
+/*h1 {
+    color: #333333;
 }
-
+*/
 h4 {
     color: #333333!important;
 }
@@ -746,9 +754,9 @@ h4 {
 .white {
     color: #FFFFFF!important;
 }
-
 .portfolio-thumb {
     margin-bottom: 24px;
+    width: 100%;
 }
 
 .portfolio-row {
@@ -761,13 +769,13 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color:  rgba(54, 69, 119,0.8);
     padding: 10px;
 }
 
 .bold-link {
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 400;
     text-decoration: underline!important;
 }
 
@@ -780,21 +788,21 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #FFCA9F;
 }
 
-.tc-white {
-    color: #F3976C!important;
+/*.tc-white {
+    color: #FFF;
 }
-
+*/
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: #FFFFFF!important;
+    background: #FFCA9F;
+    color: #364577!important;
 }
 
 .btn-atomic-tangerine:hover {
-    background: #c27956!important;
-    color: #FFFFFF!important;
+background: #fff;
+    color: #364577!important;
 }
 
 .ltc-white {
